applets/trash: Use KIO CommandLauncherJob to open trash

QDesktopServices::openUrl (through Qt.openUrlExternally) requests a
token from the focus window. When trash is clicked in a panel, the panel
doesn't have focus, resulting in no token being created.

KProcessRunner used by KIO CommandLauncherJob as a fallback takes
whatever first window in qApp making activation work.

While at it, also use KNotificationJobUiDelegate for proper error
reporting in case opening trash fails.

BUG: 499936